kubernetes/gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-app
  labels:
    app: gateway-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service-app
  template:
    metadata:
      labels:
        app: gateway-service-app
    spec:
      containers:
        - name: gateway-service-app
          image: anojpeiris/gateway-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-svc
spec:
  selector:
    app: gateway-service-app
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080 # Specify your desired NodePort here
      protocol: TCP
