kubernetes/learner-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner-server-app
  labels:
    app: learner-server-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learner-server-app
  template:
    metadata:
      labels:
        app: learner-server-app
    spec:
      containers:
        - name: learner-server-app
          image: anojpeiris/learner-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3004

---
apiVersion: v1
kind: Service
metadata:
  name: learner-server-svc
spec:
  selector:
    app: learner-server-app
  type: NodePort
  ports:
    - port: 8004
      targetPort: 8004
      nodePort: 30004 # Specify your desired NodePort here
      protocol: TCP
